--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <script src="./lib/phaser.min.js"></script>
     <script src="./src/Prefabs/Rocket.js"></script>
-    <script src="./src/prefabs/Spaceship.js"></script>
-    <script src="./src/scenes/Menu.js"></script>
-    <script src="./src/scenes/play.js"></script>
+    <script src="./src/Prefabs/Spaceship.js"></script>
+    <script src="./src/Scenes/Menu.js"></script>
+    <script src="./src/Scenes/play.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
