For real this time

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="./src/Prefabs/Rocket.js"></script>
     <script src="./src/Prefabs/Spaceship.js"></script>
     <script src="./src/Scenes/Menu.js"></script>
-    <script src="./src/Scenes/play.js"></script>
+    <script src="./src/Scenes/Play.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
