--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <script src="./lib/phaser.min.js"></script>
-    <script src="./src/Prefabs/Rocket.js"></script>
+    <script src="./src/Prefabs/Sun.js"></script>
     <script src="./src/Prefabs/Spaceship.js"></script>
     <script src="./src/Scenes/Menu.js"></script>
     <script src="./src/Scenes/Play.js"></script>
