Changed file/variable names to match new theme

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <script src="./lib/phaser.min.js"></script>
     <script src="./src/Prefabs/Sun.js"></script>
-    <script src="./src/Prefabs/Spaceship.js"></script>
+    <script src="./src/Prefabs/Asteroid.js"></script>
     <script src="./src/Scenes/Menu.js"></script>
     <script src="./src/Scenes/Play.js"></script>
     <script src="./src/main.js"></script>
