--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./lib/phaser.min.js"></script>
     <script src="./src/Prefabs/Sun.js"></script>
     <script src="./src/Prefabs/Asteroid.js"></script>
+    <script src="./src/Prefabs/Stardust.js"></script>
     <script src="./src/Scenes/Menu.js"></script>
     <script src="./src/Scenes/Play.js"></script>
     <script src="./src/main.js"></script>
