Progress bar fully functional; changes color

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <script src="./lib/phaser.min.js"></script>
+    <script src="./src/Prefabs/progressbar.js"></script>
     <script src="./src/Prefabs/Sun.js"></script>
     <script src="./src/Prefabs/Asteroid.js"></script>
     <script src="./src/Prefabs/Stardust.js"></script>
