Tutorial and Background music done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="./src/Prefabs/Planets.js"></script>
     <script src="./src/Scenes/Menu.js"></script>
     <script src="./src/Scenes/Play.js"></script>
+    <script src="./src/Scenes/Tutorial.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
